[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "claudereplay"
version = "0.1.0"
description = "Watch your AI work — replay any Claude Code session like a movie."
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [{ name = "ingridtoulotte" }]
keywords = ["claude", "claude-code", "replay", "ai", "developer-tools", "visualization", "timeline"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Utilities",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/ingridtoulotte/claudereplay"
Repository = "https://github.com/ingridtoulotte/claudereplay"
Issues = "https://github.com/ingridtoulotte/claudereplay/issues"

[project.scripts]
claudereplay = "claudereplay:main"

[tool.setuptools]
py-modules = ["claudereplay"]
